# mailman

./: .bzrignore  .cvsignore  ACKNOWLEDGMENTS  ACKNOWLEDGMENTS.txt  BUGS  DONE  FAQ  INSTALL  MANIFEST.in  Makefile.in  NEWS  NEWS.txt  README  README-I18N.en  README.BSD  README.CONTRIB  README.EXIM  README.LINUX  README.MACOSX  README.NETSCAPE  README.POSTFIX  README.QMAIL  README.SENDMAIL  README.USERAGENT  README.rst  README.txt  STYLEGUIDE.txt  TODO  TODO.txt  UPGRADING  buildout.cfg  conf.py  configure  configure.in  copybump.py  mkinstalldirs  pylint.rc  setup.cfg  setup.py  setupbzr.py  (+1 more)
Mailman/: .cvsignore  Archiver.py  Autoresponder.py  BDBMemberAdaptor.py  Bouncer.py  Crypt.py  Defaults.py  Defaults.py.in  Deliverer.py  Digester.py  EncWord.py  Errors.py  GatewayManager.py  HTMLFormatter.py  HyperArch.py  HyperDatabase.py  ListAdmin.py  LockFile.py  MailCommandHandler.py  MailList.py  Mailbox.py  Makefile.in  MemberAdaptor.py  Message.py  OldStyleMemberships.py  OutgoingQueue.py  Pending.py  Post.py  SAMemberships.py  SafeDict.py  SecurityManager.py  Site.py  TopicMgr.py  UserDesc.py  Utils.py  Version.py  aliases.py  configuration.py  constants.py  debug.py  (+16 more)
Mailman/Archiver/: Archiver.py  HyperArch.py  HyperDatabase.py  Makefile.in  __init__.py  pipermail.py
Mailman/Bouncers/: BouncerAPI.py  Caiwireless.py  Catchall.py  Compuserve.py  DSN.py  Exchange.py  Exim.py  GroupWise.py  LLNL.py  Makefile.in  Microsoft.py  Netscape.py  Postfix.py  Qmail.py  SMTP32.py  SimpleMatch.py  SimpleWarning.py  Sina.py  Smail.py  Yahoo.py  Yale.py  __init__.py
Mailman/Cgi/: Auth.py  Makefile.in  admin.py  admindb.py  archives.py  confirm.py  create.py  edithtml.py  handle_opts.py  listinfo.py  options.py  private.py  rmlist.py  roster.py  subscribe.py  wsgi_app.py
Mailman/Commands/: Makefile.in  __init__.py  cmd_confirm.py  cmd_echo.py  cmd_end.py  cmd_help.py  cmd_info.py  cmd_join.py  cmd_leave.py  cmd_lists.py  cmd_password.py  cmd_remove.py  cmd_set.py  cmd_stop.py  cmd_subscribe.py  cmd_unsubscribe.py  cmd_who.py
Mailman/Gui/: Archive.py  Autoresponse.py  Bounce.py  ContentFilter.py  Digest.py  GUIBase.py  General.py  Language.py  Makefile.in  Membership.py  NonDigest.py  Passwords.py  Privacy.py  Topics.py  Usenet.py  __init__.py
Mailman/Handlers/: Acknowledge.py  AfterDelivery.py  Approve.py  AvoidDuplicates.py  CalcRecips.py  Cleanse.py  CleanseDKIM.py  CookHeaders.py  Decorate.py  Emergency.py  FileRecips.py  HandlerAPI.py  Hold.py  Makefile.in  MimeDel.py  Moderate.py  NNTPDirect.py  OwnerRecips.py  Personalize.py  Replybot.py  SMTPDirect.py  Scrubber.py  Sendmail.py  SpamDetect.py  Tagger.py  ToArchive.py  ToDigest.py  ToOutgoing.py  ToUsenet.py
Mailman/Logging/: Logger.py  Makefile.in  MultiLogger.py  StampedLogger.py  Syslog.py  Utils.py
Mailman/MTA/: Makefile.in  Manual.py  Postfix.py  Utils.py
Mailman/Queue/: ArchRunner.py  BounceRunner.py  CommandRunner.py  Control.py  HTTPRunner.py  IncomingRunner.py  LMTPRunner.py  MaildirRunner.py  Makefile.in  NewsRunner.py  OutgoingRunner.py  RetryRunner.py  Runner.py  Switchboard.py  VirginRunner.py  __init__.py  sbcache.py
Mailman/app/: archiving.py  bounces.py  chains.py  create.py  lifecycle.py  membership.py  (+7 more)
cgi/: Makefile.in  admin  admindb  archives  edithtml  handle_opts  listinfo  mmroster  options  private  roster  subscribe
contrib/: README.mm-handler  README.mmdsr  README.securelinux_fix  auto  check_perms_grsecurity.py  mm-handler  mm-handler.readme  mmdsr  qmail-to-mailman.py  rotatelogs.py  securelinux_fix.py
cron/: .cvsignore  Makefile.in  archive  bumpdigests  checkdbs  crontab.in.in  disabled  gate_news  mailpasswds  nightly_gzip  qrunner  run_queue  senddigests  upvolumes_monthly  upvolumes_yearly
data/: mailman.in  paths.py.in
doc/: mailman-admin.tex  mailman-install.tex  mailman-member.tex  posting-flow-chart
docs/: ACKNOWLEDGMENTS.txt  ALPHA.txt  FAQ.txt  NEWS.txt  STYLEGUIDE.txt
filters/: Makefile.in  bowa-strip
mail/: .cvsignore  Makefile.in  contact_transport  deliver  dumb_deliver
mailman/: Bouncer.py  Defaults.py  Deliverer.py  Digester.py  Errors.py  HTMLFormatter.py  MailList.py  Mailbox.py  Message.py  SafeDict.py  UserDesc.py  Utils.py  Version.py  configuration.py  constants.py  domain.py  htmlformat.py  i18n.py  initialize.py  inject.py  interact.py  languages.py  loginit.py  options.py  passwords.py  version.py
messages/: .cvsignore  Makefile.in  README.ja  docstring.files  mailman.pot  marked.files
misc/: .cvsignore  Cookie.py  Makefile.in  S98mailman.in  mailman.cfg.sample  mailman.in  majordomo.answer.txt  paths.py.in
modules/: .cvsignore  Makefile.in  aliases.py  debug.py  flock.py  htmlformat.py  maillist.py  mm_admin.py  mm_archive.py  mm_bouncer.py  mm_cfg.py  mm_cfg.py.in  mm_crypt.py  mm_defaults.py  mm_defaults.py.in  mm_deliver.py  mm_digest.py  mm_err.py  mm_gateway.py  mm_html.py  mm_mailcmd.py  mm_mbox.py  mm_message.py  mm_pending.py  mm_security.py  mm_utils.py  smtplib.py  versions.py
scripts/: Makefile.in  answer_majordomo_mail  auto  bounces  confirm  driver  join  leave  mailcmd  mailowner  owner  post  request
src/: .cvsignore  Makefile  Makefile.in  _mailman.c  admin-wrapper.c  admindb-wrapper.c  alias-wrapper.c  archives-wrapper.c  cgi-wrapper.c  common.c  common.h  edithtml-wrapper.c  handle_opts-wrapper.c  listinfo-wrapper.c  mail-wrapper.c  options-wrapper.c  roster-wrapper.c  setup.py  sphinxconf.py  subscribe-wrapper.c  vsnprintf.c
templates/: Makefile.in  admindbpreamble.html  adminsubscribeack.txt  adminunsubscribeack.txt  admlogin.txt  archives.html  checkdbs.txt  convert.txt  cronpass.txt  handle_opts.html  headfoot.html  help.txt  listinfo.html  masthead.txt  newlist.txt  nopass.txt  options.html  postack.txt  postauth.txt  postheld.txt  private.html  reenable.txt  refuse.txt  roster.html  subscribe.html  subscribeack.txt  userpass.txt  verify.txt
tests/: EmailBase.py  Makefile.in  TestBase.py  fblast.py  onebounce.py  test_bounces.py  test_handlers.py  test_membership.py  test_message.py  test_security_mgr.py  testall.py
(+2315 files in other folders)
